--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-qwik-library-name",
-  "version": "0.0.1",
-  "description": "Create a reusable Qwik component library",
+  "name": "bee-icons-qwik",
+  "version": "1.0.0",
+  "description": "Easy Qwik Bee Component to access all cool icons from bee-icons",
   "main": "./lib/index.qwik.mjs",
   "qwik": "./lib/index.qwik.mjs",
   "types": "./lib-types/index.d.ts",
@@ -40,10 +40,12 @@
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "5.59.8",
     "@typescript-eslint/parser": "5.59.8",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.41.0",
     "eslint-plugin-qwik": "latest",
     "np": "7.6.1",
     "prettier": "2.8.8",
+    "tailwindcss": "^3.3.1",
     "typescript": "5.0.4",
     "undici": "5.22.1",
     "vite": "4.3.9"
