--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bee-icons-qwik",
-  "version": "1.0.2",
+  "name": "@bee-icons/qwik",
+  "version": "1.0.4",
   "description": "Easy Qwik Bee Component to access all cool icons from bee-icons",
   "main": "./lib/index.qwik.mjs",
   "qwik": "./lib/index.qwik.mjs",
@@ -49,5 +49,401 @@
     "typescript": "5.0.4",
     "undici": "5.22.1",
     "vite": "4.3.9"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "acorn": "^8.8.2",
+    "aggregate-error": "^3.1.0",
+    "ansi-regex": "^5.0.1",
+    "ansi-align": "^3.0.1",
+    "ansi-escapes": "^4.3.2",
+    "ansi-styles": "^4.3.0",
+    "any-observable": "^0.5.1",
+    "anymatch": "^3.1.3",
+    "any-promise": "^1.3.0",
+    "arg": "^5.0.2",
+    "array-buffer-byte-length": "^1.0.0",
+    "argparse": "^2.0.1",
+    "array-includes": "^3.1.6",
+    "array-union": "^2.1.0",
+    "async-exit-hook": "^2.0.1",
+    "arrify": "^1.0.1",
+    "balanced-match": "^1.0.2",
+    "available-typed-arrays": "^1.0.5",
+    "browserslist": "^4.21.7",
+    "binary-extensions": "^2.2.0",
+    "brace-expansion": "^1.1.11",
+    "boxen": "^5.1.2",
+    "braces": "^3.0.2",
+    "cacheable-request": "^7.0.4",
+    "busboy": "^1.6.0",
+    "cacheable-lookup": "^2.0.1",
+    "camelcase-css": "^2.0.1",
+    "builtins": "^1.0.3",
+    "camelcase": "^5.3.1",
+    "callsites": "^3.1.0",
+    "call-bind": "^1.0.2",
+    "chalk": "^4.1.2",
+    "caniuse-lite": "^1.0.30001498",
+    "camelcase-keys": "^6.2.2",
+    "chardet": "^0.7.0",
+    "clean-stack": "^2.2.0",
+    "chokidar": "^3.5.3",
+    "cli-cursor": "^3.1.0",
+    "ci-info": "^2.0.0",
+    "cli-truncate": "^0.2.1",
+    "cli-boxes": "^2.2.1",
+    "concat-map": "^0.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "cli-width": "^3.0.0",
+    "clone-response": "^1.0.3",
+    "commander": "^4.1.1",
+    "code-point-at": "^1.1.0",
+    "configstore": "^5.0.1",
+    "decamelize": "^1.2.0",
+    "crypto-random-string": "^2.0.0",
+    "cssesc": "^3.0.0",
+    "cosmiconfig": "^7.1.0",
+    "date-fns": "^1.30.1",
+    "cross-spawn": "^7.0.3",
+    "decamelize-keys": "^1.1.1",
+    "decompress-response": "^5.0.0",
+    "deep-extend": "^0.6.0",
+    "debug": "^4.3.4",
+    "deep-is": "^0.1.4",
+    "define-properties": "^1.2.0",
+    "defer-to-connect": "^2.0.1",
+    "dir-glob": "^3.0.1",
+    "del": "^6.1.1",
+    "dot-prop": "^6.0.1",
+    "didyoumean": "^1.2.2",
+    "duplexer3": "^0.1.5",
+    "end-of-stream": "^1.4.4",
+    "doctrine": "^3.0.0",
+    "elegant-spinner": "^1.0.1",
+    "dlv": "^1.1.3",
+    "es-set-tostringtag": "^2.0.1",
+    "error-ex": "^1.3.2",
+    "emoji-regex": "^8.0.0",
+    "electron-to-chromium": "^1.4.427",
+    "escape-goat": "^3.0.0",
+    "escalade": "^3.1.1",
+    "es-abstract": "^1.21.2",
+    "esbuild": "^0.17.19",
+    "es-to-primitive": "^1.2.1",
+    "eslint-scope": "^5.1.1",
+    "esutils": "^2.0.3",
+    "estraverse": "^4.3.0",
+    "eslint-visitor-keys": "^3.4.1",
+    "escape-string-regexp": "^4.0.0",
+    "external-editor": "^3.1.0",
+    "espree": "^9.5.2",
+    "esrecurse": "^4.3.0",
+    "execa": "^5.1.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-levenshtein": "^2.0.6",
+    "figures": "^3.2.0",
+    "esquery": "^1.5.0",
+    "fastq": "^1.15.0",
+    "fill-range": "^7.0.1",
+    "flat-cache": "^3.0.4",
+    "file-entry-cache": "^6.0.1",
+    "fs.realpath": "^1.0.0",
+    "find-up": "^5.0.0",
+    "fast-glob": "^3.2.12",
+    "for-each": "^0.3.3",
+    "function.prototype.name": "^1.1.5",
+    "function-bind": "^1.1.1",
+    "fraction.js": "^4.2.0",
+    "fsevents": "^2.3.2",
+    "functions-have-names": "^1.2.3",
+    "glob": "^7.2.3",
+    "github-url-from-git": "^1.5.0",
+    "get-intrinsic": "^1.2.1",
+    "get-symbol-description": "^1.0.0",
+    "glob-parent": "^6.0.2",
+    "globals": "^13.20.0",
+    "flatted": "^3.2.7",
+    "globalthis": "^1.0.3",
+    "get-stream": "^6.0.1",
+    "globby": "^11.1.0",
+    "global-dirs": "^2.1.0",
+    "got": "^10.7.0",
+    "grapheme-splitter": "^1.0.4",
+    "gopd": "^1.0.1",
+    "graceful-fs": "^4.2.11",
+    "has-ansi": "^2.0.0",
+    "hard-rejection": "^2.1.0",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "graphemer": "^1.4.0",
+    "has-proto": "^1.0.1",
+    "has": "^1.0.3",
+    "http-cache-semantics": "^4.1.1",
+    "has-bigints": "^1.0.2",
+    "has-yarn": "^2.1.0",
+    "has-tostringtag": "^1.0.0",
+    "iconv-lite": "^0.4.24",
+    "hosted-git-info": "^3.0.8",
+    "has-symbols": "^1.0.3",
+    "import-fresh": "^3.3.0",
+    "ignore-walk": "^3.0.4",
+    "import-lazy": "^2.1.0",
+    "ignore": "^5.2.4",
+    "human-signals": "^2.1.0",
+    "indent-string": "^3.2.0",
+    "inherits": "^2.0.4",
+    "inflight": "^1.0.6",
+    "import-local": "^3.1.0",
+    "inquirer-autosubmit-prompt": "^0.2.0",
+    "is-arrayish": "^0.2.1",
+    "ini": "^1.3.7",
+    "internal-slot": "^1.0.5",
+    "imurmurhash": "^0.1.4",
+    "is-binary-path": "^2.1.0",
+    "is-array-buffer": "^3.0.2",
+    "is-ci": "^2.0.0",
+    "is-callable": "^1.2.7",
+    "inquirer": "^7.3.3",
+    "is-bigint": "^1.0.4",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-docker": "^2.2.1",
+    "is-extglob": "^2.1.1",
+    "is-installed-globally": "^0.3.2",
+    "is-core-module": "^2.12.1",
+    "is-number": "^7.0.0",
+    "is-glob": "^4.0.3",
+    "is-interactive": "^1.0.0",
+    "is-npm": "^5.0.0",
+    "is-observable": "^1.1.0",
+    "is-number-object": "^1.0.7",
+    "is-obj": "^2.0.0",
+    "is-promise": "^2.2.2",
+    "is-scoped": "^2.1.0",
+    "is-path-inside": "^3.0.3",
+    "is-date-object": "^1.0.5",
+    "is-path-cwd": "^2.2.0",
+    "is-plain-obj": "^1.1.0",
+    "is-symbol": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-regex": "^1.1.4",
+    "is-string": "^1.0.7",
+    "is-typed-array": "^1.1.10",
+    "is-url-superb": "^4.0.0",
+    "is-stream": "^2.0.1",
+    "is-negative-zero": "^2.0.2",
+    "is-weakref": "^1.0.2",
+    "is-typedarray": "^1.0.0",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-wsl": "^2.2.0",
+    "is-yarn-global": "^0.3.0",
+    "isexe": "^2.0.0",
+    "is-unicode-supported": "^0.1.0",
+    "json-buffer": "^3.0.1",
+    "issue-regex": "^3.1.0",
+    "js-yaml": "^4.1.0",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "kind-of": "^6.0.3",
+    "js-tokens": "^4.0.0",
+    "keyv": "^4.5.2",
+    "jiti": "^1.18.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "latest-version": "^5.1.0",
+    "lilconfig": "^2.1.0",
+    "listr-silent-renderer": "^1.1.1",
+    "listr-input": "^0.2.1",
+    "listr": "^0.14.3",
+    "listr-verbose-renderer": "^0.5.0",
+    "lodash.isequal": "^4.5.0",
+    "lodash.merge": "^4.6.2",
+    "lines-and-columns": "^1.2.4",
+    "jsx-ast-utils": "^3.3.3",
+    "locate-path": "^6.0.0",
+    "lodash.zip": "^4.2.0",
+    "log-update": "^2.3.0",
+    "map-obj": "^4.3.0",
+    "lru-cache": "^6.0.0",
+    "make-dir": "^3.1.0",
+    "lowercase-keys": "^2.0.0",
+    "meow": "^8.1.2",
+    "map-age-cleaner": "^0.1.3",
+    "merge-stream": "^2.0.0",
+    "mimic-fn": "^2.1.0",
+    "log-symbols": "^4.1.0",
+    "levn": "^0.4.1",
+    "micromatch": "^4.0.5",
+    "merge2": "^1.4.1",
+    "mimic-response": "^2.1.0",
+    "mute-stream": "^0.0.8",
+    "lodash": "^4.17.21",
+    "listr-update-renderer": "^0.5.0",
+    "natural-compare": "^1.4.0",
+    "mz": "^2.7.0",
+    "ms": "^2.1.2",
+    "natural-compare-lite": "^1.4.0",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "new-github-release-url": "^1.0.0",
+    "nanoid": "^3.3.6",
+    "normalize-range": "^0.1.2",
+    "minimist-options": "^4.1.0",
+    "npm-name": "^6.0.1",
+    "node-releases": "^2.0.12",
+    "normalize-url": "^6.1.0",
+    "normalize-package-data": "^3.0.3",
+    "number-is-nan": "^1.0.1",
+    "min-indent": "^1.0.1",
+    "normalize-path": "^3.0.0",
+    "once": "^1.4.0",
+    "object-inspect": "^1.12.3",
+    "object-keys": "^1.1.1",
+    "object-assign": "^4.1.1",
+    "npm-run-path": "^4.0.1",
+    "object.assign": "^4.1.4",
+    "onetime": "^5.1.2",
+    "object-hash": "^3.0.0",
+    "org-regex": "^1.0.0",
+    "p-defer": "^1.0.0",
+    "p-cancelable": "^2.1.1",
+    "optionator": "^0.9.1",
+    "p-event": "^4.2.0",
+    "open": "^7.4.2",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "p-finally": "^1.0.0",
+    "p-reflect": "^2.1.0",
+    "p-map": "^4.0.0",
+    "p-settle": "^4.1.1",
+    "p-memoize": "^4.0.4",
+    "p-try": "^2.2.0",
+    "ow": "^0.21.0",
+    "parse-json": "^5.2.0",
+    "parent-module": "^1.0.1",
+    "path-exists": "^4.0.0",
+    "package-json": "^6.5.0",
+    "os-tmpdir": "^1.0.2",
+    "path-key": "^3.1.1",
+    "path-type": "^4.0.0",
+    "pkg-dir": "^5.0.0",
+    "path-is-absolute": "^1.0.1",
+    "picomatch": "^2.3.1",
+    "picocolors": "^1.0.0",
+    "pify": "^2.3.0",
+    "path-parse": "^1.0.7",
+    "pirates": "^4.0.5",
+    "postcss-load-config": "^4.0.1",
+    "postcss-js": "^4.0.1",
+    "p-timeout": "^4.1.0",
+    "prepend-http": "^2.0.0",
+    "postcss-nested": "^6.0.1",
+    "prelude-ls": "^1.2.1",
+    "pump": "^3.0.0",
+    "pupa": "^2.1.1",
+    "postcss": "^8.4.24",
+    "postcss-import": "^15.1.0",
+    "postcss-value-parser": "^4.2.0",
+    "postcss-selector-parser": "^6.0.13",
+    "queue-microtask": "^1.2.3",
+    "rc": "^1.2.8",
+    "read-pkg": "^5.2.0",
+    "punycode": "^2.3.0",
+    "read-pkg-up": "^7.0.1",
+    "read-cache": "^1.0.0",
+    "readdirp": "^3.6.0",
+    "regexp.prototype.flags": "^1.5.0",
+    "quick-lru": "^4.0.1",
+    "registry-url": "^5.1.0",
+    "redent": "^3.0.0",
+    "resolve-cwd": "^3.0.0",
+    "resolve-from": "^4.0.0",
+    "responselike": "^2.0.1",
+    "registry-auth-token": "^4.2.2",
+    "restore-cursor": "^3.1.0",
+    "reusify": "^1.0.4",
+    "rollup": "^3.24.1",
+    "run-async": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "scoped-regex": "^2.1.0",
+    "safer-buffer": "^2.1.2",
+    "semver-diff": "^3.1.1",
+    "safe-regex-test": "^1.0.0",
+    "shebang-command": "^2.0.0",
+    "resolve": "^1.22.2",
+    "signal-exit": "^3.0.7",
+    "side-channel": "^1.0.4",
+    "shebang-regex": "^3.0.0",
+    "slice-ansi": "^0.0.4",
+    "rxjs": "^6.6.7",
+    "semver": "^7.5.1",
+    "spdx-license-ids": "^3.0.13",
+    "spdx-correct": "^3.2.0",
+    "slash": "^3.0.0",
+    "string-width": "^4.2.3",
+    "split": "^1.0.1",
+    "spdx-exceptions": "^2.3.0",
+    "source-map-js": "^1.0.2",
+    "spdx-expression-parse": "^3.0.1",
+    "strip-indent": "^3.0.0",
+    "string.prototype.trimend": "^1.0.6",
+    "strip-final-newline": "^2.0.0",
+    "string.prototype.trim": "^1.2.7",
+    "strip-json-comments": "^3.1.1",
+    "string.prototype.trimstart": "^1.0.6",
+    "streamsearch": "^1.1.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "symbol-observable": "^3.0.0",
+    "terminal-link": "^2.1.1",
+    "supports-color": "^7.2.0",
+    "supports-hyperlinks": "^2.3.0",
+    "strip-ansi": "^6.0.1",
+    "thenify": "^3.3.1",
+    "to-readable-stream": "^2.1.0",
+    "thenify-all": "^1.6.0",
+    "text-table": "^0.2.0",
+    "sucrase": "^3.32.0",
+    "tmp": "^0.0.33",
+    "trim-newlines": "^3.0.1",
+    "ts-interface-checker": "^0.1.13",
+    "tslib": "^1.14.1",
+    "to-regex-range": "^5.0.1",
+    "typed-array-length": "^1.0.4",
+    "through": "^2.3.8",
+    "unbox-primitive": "^1.0.2",
+    "tsutils": "^3.21.0",
+    "url-parse-lax": "^3.0.0",
+    "type-fest": "^0.20.2",
+    "type-check": "^0.4.0",
+    "validate-npm-package-license": "^3.0.4",
+    "vali-date": "^1.0.0",
+    "unique-string": "^2.0.0",
+    "typedarray-to-buffer": "^3.1.5",
+    "update-notifier": "^5.1.0",
+    "update-browserslist-db": "^1.0.11",
+    "util-deprecate": "^1.0.2",
+    "uri-js": "^4.4.1",
+    "validate-npm-package-name": "^3.0.0",
+    "word-wrap": "^1.2.3",
+    "widest-line": "^3.1.0",
+    "which-typed-array": "^1.1.9",
+    "which": "^2.0.2",
+    "wrappy": "^1.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "wrap-ansi": "^3.0.1",
+    "xdg-basedir": "^4.0.0",
+    "write-file-atomic": "^3.0.3",
+    "yocto-queue": "^0.1.0",
+    "yallist": "^4.0.0",
+    "yaml": "^1.10.2",
+    "yargs-parser": "^20.2.9"
+  },
+  "author": "Manuel Sanchez",
+  "license": "ISC"
 }
